# rcli

./: Cargo.toml  README.md  deny.toml  test.http
fixtures/: blake3.txt  ed25519.pk  ed25519.sk  tmp.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64_opt.rs  csv_opt.rs  http_opt.rs  mod.rs  text_opt.rs
src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http.rs  mod.rs  text.rs
